# blueking-honor

./: .dockerignore  .gitignore  Dockerfile  License.txt  Makefile  README.md  docker-compose.yaml  readme_en.md
docs/: contributing.md  dev_guide.md  (+2 more)
src/api/: manage.py  pyproject.toml
src/api/bk_honor/: urls.py  wsgi.py
src/api/bk_honor/account/: apps.py  backends.py  constants.py  forms.py  managers.py  middlewares.py  models.py  response.py  urls.py  views.py
src/api/bk_honor/account/migrations/: 0001_initial.py
src/api/bk_honor/account/permissions/: base.py  permissions.py  resources.py  system.py
src/api/bk_honor/apis/: urls.py
src/api/bk_honor/awards/: apps.py  constants.py  exceptions.py  serializers.py  urls.py
src/api/bk_honor/awards/management/commands/: add_admin_to_roles.py  add_usernames_to_group.py  load_dev_data.py  load_policies_from_yaml.py
src/api/bk_honor/awards/migrations/: 0001_initial.py
src/api/bk_honor/awards/models/: __init__.py  cores.py  managers.py  others.py
src/api/bk_honor/awards/parsers/: __init__.py  approval.py  approval_time_collection.py  collection.py  extra_info_collection.py  notification.py  summary_collection.py
src/api/bk_honor/awards/presets/: __init__.py
src/api/bk_honor/awards/presets/applications/: XXX奖-申报.yaml
src/api/bk_honor/awards/sites/: __init__.py  serializers.py  views.py
src/api/bk_honor/awards/viewsets/: __init__.py  application.py  award.py  policy.py  step.py  summary.py
src/api/bk_honor/common/: bk_repo.py  context_processors.py  error_codes.py  exception_handler.py  intervaltree.py  model.py  notifier.py  pagination.py  response.py  sentry.py  serializers.py  views.py
src/api/bk_honor/settings/: __init__.py  django.py  env.example  logging.py  platform.py
src/api/bk_honor/settings/overlays/: dev.py  prod.py
src/api/bk_honor/tests/: conftest.py
src/api/bk_honor/tests/account/: test_permissions.py
src/api/bk_honor/tests/awards/: test_manager.py  test_stage.py
(+80 files in other folders)
